# Flask-API_RESTfull

./: README.md  pyproject.toml
instance/: blog.sqlite  dio_bank.sqlite
migrations/versions/: b7a02812c6a5_initial_migration.py  cac4c7abea15_add_active_attr_in_user.py
src/: app.py  utils.py
src/controllers/: auth.py  post.py  user.py
tests/: test_utils.py
